--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,14 @@ dependencies {
     //FireBase Login
     implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+
+    //Material Design
+    implementation 'com.google.android.material:material:1.1.0'
+
+    //Rounded Image View
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc03'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc03'
 }
