--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".RegisterUser" />
         <activity android:name=".RegisterUserSecond"/>
         <activity android:name=".MainActivity" />
+        <activity android:name=".makanan.MenuMakanan"/>
 
         <meta-data
             android:name="preloaded_fonts"
