--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ android {
     buildFeatures {
         dataBinding true
     }
+
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -54,4 +59,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0' //recycleview
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0' //cardview
+
+    //geolocation
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.6'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
 }
