--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.arnawajuan.tubes_uts">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,6 +23,7 @@
         <activity android:name=".RegisterUser" />
         <activity android:name=".RegisterUserSecond"/>
         <activity android:name=".MainActivity" />
+        <activity android:name=".GeolocationActivity"/>
         <activity android:name=".makanan.MenuMakanan"/>
 
 
