--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,16 @@
         </activity>
         <activity android:name=".UserLogin" />
         <activity android:name=".RegisterUser" />
-        <activity android:name=".RegisterUserSecond"/>
         <activity android:name=".MainActivity" />
         <activity android:name=".GeolocationActivity"/>
         <activity android:name=".makanan.MenuMakanan"/>
 
+        <service android:name=".MessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+
+        </service>
 
         <meta-data
             android:name="preloaded_fonts"
