--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.arnawajuan.tubes_uts"
+        applicationId "com.arnawajuan.rumah_makan_cilik"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
