--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
 
     //FireStore save data
     implementation 'com.google.firebase:firebase-firestore:17.1.2'
+    androidTestImplementation 'androidx.test:rules:1.3.1-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0-alpha02'
 
     //ROOM
     def room_version="2.2.5"
